# serenity

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  discord.yml  libjs-test262.yml  lintcommits.yml  manpages.yml  pvs-studio-static-analysis.yml  social-media.yml  sonar-cloud-static-analysis.yml  twitter.yml
AK/: BumpAllocator.h  Error.h  Format.cpp  MappedFile.cpp  Platform.h  PrintfImplementation.h  Random.h  Singleton.h  StackInfo.cpp  Types.h  kmalloc.cpp  kmalloc.h  kstdio.h
Documentation/: AdvancedBuildInstructions.md  BuildInstructions.md  BuildInstructionsWindows.md  CLionConfiguration.md  RunningOnRaspberryPi.md  RunningTests.md  Troubleshooting.md  VSCodeConfiguration.md
Kernel/: CMakeLists.txt
Kernel/API/: Syscall.h
Kernel/Prekernel/: CMakeLists.txt
Meta/: build-image-extlinux.sh  build-image-grub.sh  build-image-qemu.sh  build-manpages-website.sh  build-root-filesystem.sh  check-markdown.sh  debug-kernel.sh  export-argsparser-manpages.sh  gelassenheit.sh  install-ports-tree.sh  new-project.sh  refresh-serenity-qtcreator.sh  run.sh  toot-commits.js
Meta/CMake/: code_generators.cmake  serenity_components.cmake  utils.cmake  wasm_spec_tests.cmake
Meta/CMake/Superbuild/: CMakeLists.txt
Meta/HeaderCheck/: CMakeLists.txt  generate_all.py
Meta/Lagom/: CMakeLists.txt
Ports/: .hosted_defs.sh  .port_include.sh  README.md  build_installed.sh
Ports/Another-World/: package.sh
Ports/SDL2/: package.sh
Ports/SDL2_gfx/: package.sh
Ports/SDL2_image/: package.sh
Ports/SDL2_mixer/: package.sh
Ports/SDL2_net/: package.sh
Ports/SDL2_ttf/: package.sh
Ports/SDLPoP/: package.sh
Ports/SDL_sound/: package.sh
Ports/Super-Mario/: package.sh
Ports/angband/: package.sh
Ports/bash/: package.sh
Ports/bass/: package.sh
Ports/binutils/: package.sh
Ports/bison/: package.sh
Ports/brogue/: package.sh
Ports/bzip2/: package.sh
Ports/c-ray/: package.sh
Ports/carl/: package.sh
Ports/chester/: package.sh
Ports/cmake/: package.sh
Ports/cmatrix/: package.sh
Ports/composer/: package.sh
Ports/curl/: package.sh
Ports/dash/: package.sh
Ports/dialog/: package.sh
Ports/dmidecode/: package.sh
Ports/dosbox-staging/: package.sh
Ports/drascula/: package.sh
Ports/dreamweb/: package.sh
Ports/dungeonrush/: package.sh
Ports/emu2/: package.sh
Ports/epsilon/: package.sh
Ports/ffmpeg/: package.sh
Ports/flatbuffers/: package.sh
Ports/fontconfig/: package.sh
Ports/fotaq/: package.sh
Ports/freedink/: package.sh
Ports/freetype/: package.sh
Ports/frotz/: package.sh
Ports/gcc/: package.sh
Ports/genemu/: package.sh
Ports/gettext/: package.sh
Ports/git/: package.sh
Ports/glib/: package.sh
Ports/glm/: package.sh
Ports/gnupg/: package.sh
Ports/gnuplot/: package.sh
Ports/griffon/: package.sh
Ports/harfbuzz/: package.sh
Ports/hatari/: package.sh
Ports/imgcat/: package.sh
Ports/indent/: package.sh
Ports/libassuan/: package.sh
Ports/libgcrypt/: package.sh
Ports/libgpg-error/: package.sh
Ports/libiconv/: package.sh
Ports/libicu/: package.sh
Ports/libjpeg/: package.sh
Ports/libksba/: package.sh
Ports/libmodplug/: package.sh
Ports/libogg/: package.sh
Ports/libopenal/: package.sh
Ports/libphysfs/: package.sh
Ports/libpng/: package.sh
Ports/libsixel/: package.sh
Ports/libsodium/: package.sh
Ports/libtheora/: package.sh
Ports/libtiff/: package.sh
Ports/libtool/: package.sh
Ports/libuv/: package.sh
Ports/libvorbis/: package.sh
Ports/libxml2/: package.sh
Ports/libzip/: package.sh
Ports/llvm/: package.sh
Ports/lua/: package.sh
Ports/lure/: package.sh
Ports/make/: package.sh
Ports/mawk/: package.sh
Ports/mbedtls/: package.sh
Ports/milkytracker/: package.sh
Ports/mpc/: package.sh
Ports/mpfr/: package.sh
Ports/mruby/: package.sh
Ports/mysthous/: package.sh
Ports/nano/: package.sh
Ports/ncdu/: package.sh
Ports/ncurses/: package.sh
Ports/neofetch/: package.sh
Ports/nesalizer/: package.sh
Ports/ninja/: package.sh
Ports/nippon/: package.sh
Ports/npth/: package.sh
Ports/ntbtls/: package.sh
Ports/oksh/: package.sh
Ports/openssh/: package.sh
Ports/openssl/: package.sh
Ports/openttd/: package.sh
Ports/openttd-opengfx/: package.sh
Ports/openttd-opensfx/: package.sh
Ports/opentyrian/: package.sh
Ports/opentyrian-data/: package.sh
Ports/p7zip/: package.sh
Ports/php/: package.sh
Ports/pkgconf/: package.sh
Ports/pt2-clone/: package.sh
Ports/pv/: package.sh
Ports/python3/: package.sh
Ports/quake2/: package.sh
Ports/rsync/: package.sh
Ports/sam/: package.sh
Ports/scummvm/: package.sh
Ports/sfinx/: package.sh
Ports/sl/: package.sh
Ports/soltys/: package.sh
Ports/sqlite/: package.sh
Ports/stpuzzles/: package.sh
Ports/stress-ng/: package.sh
Ports/termcap/: package.sh
Ports/tinycc/: package.sh
Ports/tinyscheme/: package.sh
Ports/vim/: package.sh
Ports/vlang/: package.sh
Ports/xz/: package.sh
Ports/zlib/: package.sh
Tests/: CMakeLists.txt
Tests/LibJS/: test262-runner.cpp
Tests/LibRegex/: Benchmark.cpp
Toolchain/: BuildClang.sh  BuildIt.sh  Dockerfile  README.md
Toolchain/CMake/: ClangToolchain.txt.in  GNUToolchain.txt.in  LLVMConfig.cmake  LLVMRuntimesConfig.cmake
Toolchain/Patches/: binutils.patch  gcc.patch  gdb.patch  llvm.patch
Toolchain/Stubs/: README.md
Userland/Applications/: CMakeLists.txt
Userland/Applications/Catdogstodon/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  Post.gml  PostContentConversion.cpp  PostContentConversion.h  PostWidget.cpp  PostWidget.h  main.cpp
Userland/DevTools/: CMakeLists.txt
Userland/DynamicLoader/: CMakeLists.txt
Userland/Shell/: main.cpp
Userland/Utilities/: CMakeLists.txt  adjtime.cpp  gml-format.cpp  js.cpp  markdown-check.cpp  ntpquery.cpp  run-tests.cpp  url.cpp
(+171 files in other folders)
